fix alignment issues of sharebar

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -359,48 +359,7 @@ img#image-author {
 	color: #fff;
 }
 
-// .share {
-	
-// 	.fa {
-// 		padding: 10px;
-// 		font-size: 20px;
-// 		width: 16px;
-// 		height: 16px;
-// 		text-align: center;
-// 		text-decoration: none;
-// 		margin: 2px 2px;
-// 	  }
-	  
-// 	  .fa:hover {
-// 		  opacity: 0.7;
-// 	  }
-	  
-// 	  .fa-facebook {
-// 		background: #3B5998;
-// 		color: white;
-// 	  }
-	  
-// 	  .fa-twitter {
-// 		background: #55ACEE;
-// 		color: white;
-// 	  }
-	  
-// 	  .fa-google {
-// 		background: #dd4b39;
-// 		color: white;
-// 	  }
-	  
-// 	  .fa-linkedin {
-// 		background: #007bb5;
-// 		color: white;
-// 	  }
-// }
-
-/* container */
-
 .share {
-	width: 100%;
-
 	a {
 		width: 35px;
 		height: 35px;
